--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "webpack --mode=production --node-env=production",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch"
+    "start": "react-scripts start"
   },
   "proxy": "http://localhost:7000/",
   "eslintConfig": {
